DE20053: UI alignment issue + 960 desktop style + react member

--- a/docroot/react/src/views/authentication/authentication.less
+++ b/docroot/react/src/views/authentication/authentication.less
@@ -292,7 +292,7 @@
 
 
 /* Mobile Styles */
-@media only screen and (min-width: 375px) and (max-width: 812px) and (orientation: landscape) {
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (max-device-height: 375px) and (orientation: landscape) {
     .main-content {
 
         .sso-content,
@@ -331,7 +331,7 @@
 }
 
 /* Desktop Styles */
-@media only screen and (min-width: 960px) {
+@media only screen and (min-width: 961px) {
     .main-content {
         padding: 0;
 
