--- a/docroot/react/src/views/guest-authentication/guest-authentication.less
+++ b/docroot/react/src/views/guest-authentication/guest-authentication.less
@@ -289,7 +289,7 @@
 
 
 /* Desktop Styles */
-@media only screen and (min-width: 960px) {
+@media only screen and (min-width: 961px) {
     .guest-main-content {
         padding: 0;
 
